@@ -39,6 +39,7 @@
 		 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#faq_8">8. What kind of audio streams does Sonata support?</a><br/>
 		 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#faq_9">9. How can I interface with Sonata from the command line?</a><br/>
 		 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#faq_10">10. If I have multiple columns for the playlist, can I hide the column header?</a><br/>
+		 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#faq_11">11. Clicking on links launches the wrong browser, what can I do?</a><br/>
 		 	<a href="#shortcuts">Shortcuts</a><br/>
 
 			<p><b><a name="overview">Overview</a></b>
@@ -72,7 +73,7 @@
 			<blockquote>All you have to do is start typing! On your first keystroke, Sonata will pop
 			open a filter bar (similar to xmms) at the bottom of your playlist and will filter your list 
 			based on what you type. You can use the up and down arrows to quickly cycle through 
-			songs. Escape will end the filtering.
+			songs. Escape will end the filtering.</blockquote>
 
 			<p><a name="faq_3">3</a>. Is there an easy way to toggle Sonata visible/hidden?
 			
@@ -138,6 +139,12 @@
 			<blockquote>Yes, Sonata has a hidden setting that can hide the column headers. Edit
 			your ~/.config/sonata/sonatarc file while Sonata is closed and change the <i>show_header</i>
 			value to False.</blockquote>
+			
+			<p><a name="faq_11">11</a>. Clicking on links launches the wrong browser, what can I do?
+			
+			<blockquote>There is a hidden configuration option for manually setting your own browser.
+			Simply edit your ~/.config/sonata/sonatarc file while Sonata is closed and change the
+			<i>browser</i> value to your browser binary name (e.g. "firefox").</blockquote>
 
 			<p><b><a name="shortcuts">Shortcuts</a></b>
 
